--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Sudoku</string>
+    <string name="delete">Delete</string>
+    <string name="restart">Restart</string>
 </resources>
